# Foo-et-al-parameterization

./: CMakeLists.txt  LICENSE  README.md
include/foo/: fooparameterization.hpp
src/: main.cpp
src/foo/: fooparameterization.cpp
tests/foo/: fooparameterizationtests.cpp
